--- a/src/scss/includes/_core.scss
+++ b/src/scss/includes/_core.scss
@@ -1,23 +1,3 @@
-// Libraries:
-@import 'jeet/index';
-
-// Partials:
-@import 'partials/colors';
-@import 'partials/fonts';
-@import 'partials/media';
-@import 'partials/mixins';
-
-// Includes:
-@import 'includes/header';
-@import 'includes/about';
-@import 'includes/hamburger';
-@import 'includes/ticketing';
-@import 'includes/workers';
-@import 'includes/ents';
-@import 'includes/sponsorship';
-@import 'includes/charities';
-@import 'includes/footer';
-
 html,
 body {
   height: 100%;
@@ -27,18 +7,6 @@ body {
   background-color: $color-night-sky;
   color: $color-white-text;
   font-family: $font-body;
-
-  // Preload css backgrounds.
-  &::after {
-    content: url('../img/ticket_machine-01.svg')
-             url('../img/ticket_machine-02.svg')
-             url('../img/ticket_machine-03.svg');
-    height: 0;
-    overflow: hidden;
-    position: absolute;
-    width: 0;
-    z-index: -1;
-  }
 }
 
 section,
@@ -112,7 +80,6 @@ table {
 
 a {
   color: $color-link;
-  text-decoration: none;
 
   &:active {
     color: $color-link-active;
@@ -140,6 +107,15 @@ a {
 .right {
   text-align: right;
   width: 100%;
+}
+
+.back {
+  color: $color-white-text;
+  display: block;
+  float: left;
+  font-size: 2rem;
+  padding: 1.2rem;
+  margin-left: 1rem;
 }
 
 %clearfix {
