--- a/src/scss/includes/_ticketing.scss
+++ b/src/scss/includes/_ticketing.scss
@@ -40,7 +40,7 @@
     color: $color-dark-text;
   }
 
-  .blurb {
+  .blurbs {
     @include column(2/5);
 
     @media (max-width: $media-width-medium) {
