--- a/src/scss/partials/_colors.scss
+++ b/src/scss/partials/_colors.scss
@@ -7,14 +7,15 @@ $color-ticketing:      rgb(246, 208, 146);
 $color-workers:        rgb(0, 104, 66);
 $color-ents:           rgb(0, 153, 102);
 $color-sponsorship:    rgb(228, 207, 72);
-$color-charities:      rgb(220, 41, 3);
+$color-charities:      rgb(0, 153, 102);
 $color-sponsor-bar:    rgb(242, 169, 0);
 $color-star:           rgba(255, 255, 255, .5);
 
 // Text colours:
-$color-dark-text:   rgb(16, 21, 33);
-$color-medium-text: rgb(55, 65, 75);
-$color-light-text:  rgb(230, 230, 230);
-$color-white-text:  rgb(250, 250, 250);
-$color-link:        rgb(255, 255, 255);
-$color-link-active: rgb(200, 200, 200);
+$color-dark-text:      rgb(16, 21, 33);
+$color-dark-link-text: rgb(25, 35, 70);
+$color-medium-text:    rgb(55, 65, 75);
+$color-light-text:     rgb(230, 230, 230);
+$color-white-text:     rgb(250, 250, 250);
+$color-link:           rgb(255, 255, 255);
+$color-link-active:    rgb(200, 200, 200);
