Create FAQ page with CSS accordion.

--- a/src/scss/includes/_about.scss
+++ b/src/scss/includes/_about.scss
@@ -1,6 +1,7 @@
 #about {
+  @include dark;
+
   background-color: $color-about;
-  color: $color-dark-text;
 
   .blurb {
     @include column(2/3);
