--- a/src/scss/partials/_colors.scss
+++ b/src/scss/partials/_colors.scss
@@ -9,6 +9,8 @@ $color-ents:           rgb(0, 153, 102);
 $color-sponsorship:    rgb(228, 207, 72);
 $color-charities:      rgb(0, 153, 102);
 $color-sponsor-bar:    rgb(242, 169, 0);
+$color-committee:      rgb(36, 41, 53);
+$color-footer:         rgb(36, 41, 53);
 $color-star:           rgba(255, 255, 255, .5);
 
 // Text colours:
