--- a/src/scss/includes/_header.scss
+++ b/src/scss/includes/_header.scss
@@ -183,7 +183,7 @@ header {
   nav a {
     color: $color-white-text;
     display: block;
-    font-family: $font-header;
+    font-family: $font-title;
     font-weight: bold;
     padding: 1rem 0;
     text-decoration: none;
