--- a/src/scss/partials/_fonts.scss
+++ b/src/scss/partials/_fonts.scss
@@ -1,5 +1,6 @@
 // TODO: fix up.
 $font-size-root: 1em;
 
-$font-header: 'Cinzel', cursive;
-$font-body:   'Arima Madurai', serif;
+$font-title:  'Cinzel', monospace;
+$font-header: 'Cherry Cream Soda', sans-serif;
+$font-body:   'Corben', sans-serif;
