--- a/src/scss/includes/_core.scss
+++ b/src/scss/includes/_core.scss
@@ -69,8 +69,8 @@ h4 {
 }
 
 h5 {
-  margin-bottom: .5rem;
-  margin-top: .8rem;
+  margin-bottom: .75rem;
+  margin-top: 2rem;
   text-align: center;
 }
 
