Make email links clearer.

--- a/src/scss/includes/_committee.scss
+++ b/src/scss/includes/_committee.scss
@@ -28,6 +28,11 @@
         cursor: text;
       }
     }
+
+    a {
+      font-size: .6rem;
+      text-decoration: none;
+    }
   }
 
   .committee {
