Improve padding of sponsorship section.

--- a/src/scss/includes/_sponsorship.scss
+++ b/src/scss/includes/_sponsorship.scss
@@ -6,7 +6,7 @@
   .sponsors {
     background: $color-sponsor-bar;
     margin: 0 -2rem;
-    padding: 1.5rem 2rem;
+    padding: 1.5rem 2rem 2.5rem 2rem;
     width: 100%;
 
     ul {
