Use black expansion arrows for sponsors.

--- a/src/scss/includes/_sponsorship.scss
+++ b/src/scss/includes/_sponsorship.scss
@@ -51,7 +51,7 @@
           text-align: center;
 
           &::after {
-            background-image: url('../img/expand.svg');
+            background-image: url('../img/expand_black.svg');
             background-position: center bottom;
             background-repeat: no-repeat;
             content: '';
